--- a/Sprint/Sprint/Views/Game/Index.cshtml
+++ b/Sprint/Sprint/Views/Game/Index.cshtml
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3 mt-2">
-            <h5 class="text-light text-left font-weight-light">Games</h5>
+            <h4 class="text-light font-weight-light text-uppercase">Games</h4>
         </div>
 
         <div class="col-sm-9">
