--- a/Sprint/Sprint/Views/Cart/Index.cshtml
+++ b/Sprint/Sprint/Views/Cart/Index.cshtml
@@ -8,11 +8,43 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<h4 class="text-light font-weight-light text-uppercase">Your Cart</h4>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+            <h4 class="text-light font-weight-light text-uppercase">Your Cart</h4>
+        </div>
+    </div>
+    @if (TempData["CartError"] is string)
+    {
+        <div class="alert alert-danger" role="alert">
+            <i class="fa fa-exclamation-triangle mr-2" aria-hidden="true"></i>@TempData["CartError"]
+        </div>
+    }
+    <div class="row">
+        <div class="col-md">
+            @if (TempData["CartAdded"] is string)
+            {
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                <div class="alert alert-success" role="alert">
+                    <i class="fa fa-heart mr-2" aria-hidden="true"></i>@TempData["CartAdded"]
+                </div>
+            }
+
+            @if (TempData["CartRemoved"] is string)
+            {
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                <div class="alert alert-secondary" role="alert">
+                    <i class="fa fa-times-circle mr-2" aria-hidden="true"></i>@TempData["CartRemoved"]
+                </div>
+            }
+        </div>
+    </div>
+</div>
 
 <table class="table">
     <thead>
         <tr>
+            <th></th>
             <th>
                 Game
             </th>
@@ -22,15 +54,10 @@
             <th>
                 Added On
             </th>
-            @if (Model.ContainsGiftItem)
-            {
-                <th>
-                    Gift
-                </th>
-            }
             <th>
                 Price
             </th>
+            <th></th>
             <th></th>
         </tr>
     </thead>
@@ -39,26 +66,22 @@
         {
             <tr>
                 <td>
+                    <a asp-controller="Game" asp-action="Details" asp-route-id="@item.CartItem.Game.GameId">
+                        @if (item.Image != null)
+                        {<img height="50" width="100" src="@item.Image.ImageURL">}
+                    </a>
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.CartItem.Game.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CartItem.Game.Developer)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CartItem.AddedOn)
+                    <span class="cursor-help" title="@item.CartItem.AddedOn?.ToString("MMM dd h:mm tt")">
+                        @(item.CartItem.AddedOn?.ToString("yyyy/MM/dd"))
+                    </span>
                 </td>
-                @if (Model.ContainsGiftItem)
-                {
-                    <td>
-                        @if (item.CartItem.ReceivingUserId != Model.User.Id)
-                        {
-                            <a asp-controller="Wishlist" asp-route-username="@item.CartItem.ReceivingUser.Name" title="View @item.CartItem.ReceivingUser.Name's wishlist">
-                                <i class="text-light fa fa-gift" aria-hidden="true"></i>
-                                @item.CartItem.ReceivingUser.Name
-                            </a>
-                        }
-                    </td>
-                }
                 <td>
                     @if (item.Discount != null)
                     {
@@ -82,7 +105,26 @@
                     }
                 </td>
                 <td>
-                    @*<a asp-action="Remove" asp-route-id="@item.CartItem.CartGameId">Remove</a>*@
+                    @if (item.CartItem.ReceivingUserId == Model.User.Id)
+                    {
+                        <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift" class="btn btn-sm btn-light" role="button" title="Purchase as a gift">
+                            <i class="text-dark fa fa-gift" aria-hidden="true"></i>
+                        </a>
+                    }
+                    else
+                    {
+                        <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift" class="btn btn-link p-0" title="Change Friend">
+                            <i class="text-light fa fa-gift" aria-hidden="true"></i>
+                        </a>
+                        <a asp-controller="Wishlist" asp-route-username="@item.CartItem.ReceivingUser.Name" title="View @item.CartItem.ReceivingUser.Name's wishlist">
+                            @item.CartItem.ReceivingUser.Name
+                        </a>
+                    }
+                </td>
+                <td>
+                    <form asp-route-gameId="@item.CartItem.Game.GameId" asp-route-recipientUserId="@item.CartItem.ReceivingUserId" asp-controller="Cart" asp-action="Remove">
+                        <button type="submit" class="btn btn-link" title="Remove"><i class="fa fa-times text-danger" aria-hidden="true"></i></button>
+                    </form>
                 </td>
             </tr>
         }
