--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -61,8 +61,6 @@
         <tbody>
             @foreach (var item in Model.Games)
             {
-                string dateAdded = ((DateTime)item.WishlistItem.AddedOn).ToString("MMM dd yyyy h:mm tt");
-
                 <tr>
                     <td>
                         <a asp-controller="Game" asp-action="Details" asp-route-id="@item.WishlistItem.Game.GameId">
@@ -77,7 +75,9 @@
                         @Html.DisplayFor(modelItem => item.WishlistItem.Game.Developer)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => dateAdded)
+                        <span class="cursor-help" title="@item.WishlistItem.AddedOn?.ToString("MMM dd h:mm tt")">
+                            @(item.WishlistItem.AddedOn?.ToString("yyyy/MM/dd"))
+                        </span>
                     </td>
                     <td>
                         @if (item.Discount != null)
