Add Cart unit tests and update DBContextController

--- a/Sprint/Sprint/Views/Cart/Gift.cshtml
+++ b/Sprint/Sprint/Views/Cart/Gift.cshtml
@@ -16,6 +16,7 @@
             <input type="hidden" asp-for="CartGameId" />
             <input type="hidden" asp-for="CartUserId" />
             <input type="hidden" asp-for="GameId" />
+            <input type="hidden" asp-for="AddedOn" />
             <div class="form-group">
                 <label class="control-label">Gift to a Friend</label>
                 <select asp-for="ReceivingUserId" class="form-control" asp-items="ViewBag.RelatedUserId">
