--- a/Sprint/Sprint/Views/Friends/Index.cshtml
+++ b/Sprint/Sprint/Views/Friends/Index.cshtml
@@ -127,5 +127,5 @@
 }
 else if (!Model.PendingRelationships.Any())
 {
-    <h4 class="text-light font-weight-light text-uppercase text-center">You haven't added anybody yet</h4>
+    <h4 class="text-light font-weight-light text-uppercase text-center mt-3">You haven't added anybody yet</h4>
 }
