Update existing views to match Game Index style

--- a/Sprint/Sprint/Views/Friends/Add.cshtml
+++ b/Sprint/Sprint/Views/Friends/Add.cshtml
@@ -5,9 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="row centered-form">
     <div class="container col-md-6 col-md-offset-1">
-        <h1>Invite New Friend</h1>
+        <h4 class="text-light font-weight-lighter text-uppercase">
+            <i class="fa fa-user-plus text-secondary pr-2" aria-hidden="true"></i>Invite New Friend
+        </h4>
         <hr />
         <form asp-action="Add">
             <div class="form-row">
