--- a/Sprint/Sprint/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Sprint/Sprint/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,13 @@
     }
 }
 
-<h2 style="color:white;">Manage your account</h2>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<h4 class="text-light font-weight-light text-uppercase">
+    <i class="fa fa-cogs text-secondary pr-2" aria-hidden="true"></i>Manage your account
+</h4>
 
 <div>
-    <h4>Change your account settings</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
