--- a/Sprint/Sprint/Views/Cart/Gift.cshtml
+++ b/Sprint/Sprint/Views/Cart/Gift.cshtml
@@ -9,7 +9,9 @@
 
 <div class="row centered-form">
     <div class="container col-md-6">
-        <h4 class="text-light font-weight-light text-uppercase">@Model.Game.Name</h4>
+        <h4 class="text-light font-weight-light text-uppercase">
+            <i class="fa fa-gamepad text-secondary pr-2" aria-hidden="true"></i>@Model.Game.Name
+        </h4>
         <hr />
         <form asp-action="Gift">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -18,7 +20,7 @@
             <input type="hidden" asp-for="GameId" />
             <input type="hidden" asp-for="AddedOn" />
             <div class="form-group">
-                <label class="control-label">Gift to a Friend</label>
+                <label class="control-label"><i class="fa fa-user text-secondary pr-2" aria-hidden="true"></i>Gift the Game to a Friend</label>
                 <select asp-for="ReceivingUserId" class="form-control" asp-items="ViewBag.RelatedUserId">
                     <option disabled selected>Select a Friend</option>
                 </select>
