--- a/Sprint/Sprint/Views/Cart/Index.cshtml
+++ b/Sprint/Sprint/Views/Cart/Index.cshtml
@@ -8,125 +8,132 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <h4 class="text-light font-weight-light text-uppercase">Your Cart</h4>
-        </div>
-    </div>
-    @if (TempData["CartError"] is string)
-    {
-        <div class="alert alert-danger" role="alert">
-            <i class="fa fa-exclamation-triangle mr-2" aria-hidden="true"></i>@TempData["CartError"]
-        </div>
-    }
-    <div class="row">
-        <div class="col-md">
-            @if (TempData["CartAdded"] is string)
-            {
-                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-                <div class="alert alert-success" role="alert">
-                    <i class="fa fa-heart mr-2" aria-hidden="true"></i>@TempData["CartAdded"]
-                </div>
-            }
+<div class="row centered-form">
+    <div class="container col-md-9 col-md-offset-1">
 
-            @if (TempData["CartRemoved"] is string)
+        <div class="container">
+            <div class="row">
+                <div class="col-md">
+                    <h4 class="text-light font-weight-light text-uppercase">
+                        <i class="fa fa-shopping-cart text-secondary pr-2" aria-hidden="true"></i>Your Cart
+                    </h4>
+                </div>
+            </div>
+            @if (TempData["CartError"] is string)
             {
-                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-                <div class="alert alert-secondary" role="alert">
-                    <i class="fa fa-times-circle mr-2" aria-hidden="true"></i>@TempData["CartRemoved"]
+                <div class="alert alert-danger" role="alert">
+                    <i class="fa fa-exclamation-triangle mr-2" aria-hidden="true"></i>@TempData["CartError"]
                 </div>
             }
+            <div class="row">
+                <div class="col-md">
+                    @if (TempData["CartAdded"] is string)
+                    {
+                        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                        <div class="alert alert-success" role="alert">
+                            <i class="fa fa-heart mr-2" aria-hidden="true"></i>@TempData["CartAdded"]
+                        </div>
+                    }
+
+                    @if (TempData["CartRemoved"] is string)
+                    {
+                        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                        <div class="alert alert-secondary" role="alert">
+                            <i class="fa fa-times-circle mr-2" aria-hidden="true"></i>@TempData["CartRemoved"]
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
+
+        @if (Model.Items.Any())
+        {
+
+            <table class="table table-hover table-borderless rounded moist-bg-light moist-shadow moist-border-secondary mt-3">
+                <tbody>
+                    @foreach (var item in Model.Items)
+                    {
+                        <tr>
+                            <td>
+                                <a asp-controller="Game" asp-action="Details" asp-route-id="@item.CartItem.Game.GameId">
+                                    @if (item.Image != null)
+                                    {<img height="50" width="100" src="@item.Image.ImageURL">}
+                                </a>
+                            </td>
+                            <td>
+                                <a asp-controller="Game" asp-action="Details" asp-route-id="@item.CartItem.Game.GameId"
+                                   class="text-decoration-none">
+                                    <p class="text-dark font-weight-bold mb-0">
+                                        @Html.DisplayFor(modelItem => item.CartItem.Game.Name)
+                                    </p>
+                                    <p class="text-secondary mb-0">
+                                        @Html.DisplayFor(modelItem => item.CartItem.Game.Developer)
+                                    </p>
+                                </a>
+                            </td>
+                            <td>
+                                <span class="cursor-help text-secondary" title="@item.CartItem.AddedOn?.ToString("MMM dd h:mm tt")">
+                                    <span>
+                                        @(item.CartItem.AddedOn?.ToString("yyyy/MM/dd"))
+                                    </span>
+                                </span>
+                            </td>
+                            <td>
+                                @if (item.Discount != null)
+                                {
+                                    <div class="d-flex">
+                                        <div class="mr-2">
+                                            <span class="moist-discount-regular-price text-secondary">@item.CartItem.Game.RegularPrice</span>
+                                            <span class="moist-discount-price text-dark">@item.Discount.DiscountPrice</span>
+                                        </div>
+                                        <span class="moist-discount-percent shadow rounded moist-tooltip">
+                                            @string.Format("{0:0%}", item.Discount.DiscountPrice / item.CartItem.Game.RegularPrice)
+                                        </span>
+                                    </div>
+                                    <small class="text-secondary">
+                                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                        @(item.Discount.DiscountFinish.ToString("MMM dd h:mm tt"))
+                                    </small>
+                                }
+                                else
+                                {
+                                    <h5 class="text-dark font-weight-bold">@item.CartItem.Game.RegularPrice</h5>
+                                }
+                            </td>
+                            <td>
+                                @if (item.CartItem.ReceivingUserId == Model.User.Id)
+                                {
+                                    <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift"
+                                       class="btn btn-sm btn-outline-secondary gradient-button" role="button" title="Purchase as a gift">
+                                        <i class="text-dark fa fa-gift" aria-hidden="true"></i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift" class="btn btn-link p-0" title="Change Friend">
+                                        <i class="text-dark fa fa-gift" aria-hidden="true"></i>
+                                    </a>
+                                    <a asp-controller="Wishlist" asp-route-username="@item.CartItem.ReceivingUser.Name"
+                                       class="text-decoration-none text-secondary font-weight-bold" title="View @item.CartItem.ReceivingUser.Name's wishlist">
+                                        @item.CartItem.ReceivingUser.Name
+                                    </a>
+                                }
+                            </td>
+                            <td class="p-0">
+                                <form asp-route-gameId="@item.CartItem.Game.GameId" asp-route-recipientUserId="@item.CartItem.ReceivingUserId" asp-controller="Cart" asp-action="Remove">
+                                    <button type="submit" class="btn btn-link" title="Remove"><i class="fa fa-times text-danger" aria-hidden="true"></i></button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <h4 class="text-light font-weight-light text-uppercase text-center mt-3 mb-3">is currently empty</h4>
+            <p class="text-center">Explore our <a asp-controller="Game" asp-action="Index">catalog of games</a> to add to your cart.</p>
+        }
+
     </div>
 </div>
-
-@if (Model.Items.Any())
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Game</th>
-                <th>Developer</th>
-                <th>Added On</th>
-                <th>Price</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Items)
-            {
-                <tr>
-                    <td>
-                        <a asp-controller="Game" asp-action="Details" asp-route-id="@item.CartItem.Game.GameId">
-                            @if (item.Image != null)
-                            {<img height="50" width="100" src="@item.Image.ImageURL">}
-                        </a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CartItem.Game.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CartItem.Game.Developer)
-                    </td>
-                    <td>
-                        <span class="cursor-help" title="@item.CartItem.AddedOn?.ToString("MMM dd h:mm tt")">
-                            @(item.CartItem.AddedOn?.ToString("yyyy/MM/dd"))
-                        </span>
-                    </td>
-                    <td>
-                        @if (item.Discount != null)
-                        {
-                            <div class="d-flex">
-                                <div class="mr-2">
-                                    <span class="moist-discount-regular-price text-secondary">@item.CartItem.Game.RegularPrice</span>
-                                    <span class="moist-discount-price text-light">@item.Discount.DiscountPrice</span>
-                                </div>
-                                <span class="moist-discount-percent shadow rounded moist-tooltip">
-                                    @string.Format("{0:0%}", item.Discount.DiscountPrice / item.CartItem.Game.RegularPrice)
-                                </span>
-                            </div>
-                            <small class="text-secondary">
-                                <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                @(item.Discount.DiscountFinish.ToString("MMM dd h:mm tt"))
-                            </small>
-                        }
-                        else
-                        {
-                            <h5 class="text-light font-weight-bold">@item.CartItem.Game.RegularPrice</h5>
-                        }
-                    </td>
-                    <td>
-                        @if (item.CartItem.ReceivingUserId == Model.User.Id)
-                        {
-                            <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift" class="btn btn-sm btn-light" role="button" title="Purchase as a gift">
-                                <i class="text-dark fa fa-gift" aria-hidden="true"></i>
-                            </a>
-                        }
-                        else
-                        {
-                            <a asp-route-id="@item.CartItem.CartGameId" asp-controller="Cart" asp-action="Gift" class="btn btn-link p-0" title="Change Friend">
-                                <i class="text-light fa fa-gift" aria-hidden="true"></i>
-                            </a>
-                            <a asp-controller="Wishlist" asp-route-username="@item.CartItem.ReceivingUser.Name" title="View @item.CartItem.ReceivingUser.Name's wishlist">
-                                @item.CartItem.ReceivingUser.Name
-                            </a>
-                        }
-                    </td>
-                    <td>
-                        <form asp-route-gameId="@item.CartItem.Game.GameId" asp-route-recipientUserId="@item.CartItem.ReceivingUserId" asp-controller="Cart" asp-action="Remove">
-                            <button type="submit" class="btn btn-link" title="Remove"><i class="fa fa-times text-danger" aria-hidden="true"></i></button>
-                        </form>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <h4 class="text-light font-weight-light text-uppercase text-center mt-3 mb-3">is currently empty</h4>
-    <p class="text-center">Explore our <a asp-controller="Game" asp-action="Index">catalog of games</a> to add to your cart.</p>
-}
