--- a/Sprint/Sprint/Views/Friends/Remove.cshtml
+++ b/Sprint/Sprint/Views/Friends/Remove.cshtml
@@ -4,29 +4,28 @@
     ViewData["Title"] = "Remove Friend";
 }
 
-<h2 class="text-light font-weight-light text-uppercase">Remove Friend</h2>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div>
-    <h4 class="text-light text-left font-weight-light">Are you sure you want to remove this friend?</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RelatedUser.UserName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RelatedUser.UserName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-    </dl>
+<div class="row centered-form">
+    <div class="container col-md-6 col-md-offset-1">
+        <h4 class="text-light font-weight-lighter text-uppercase">
+            <i class="fa fa-user-times text-secondary pr-2" aria-hidden="true"></i>Remove Friend
+        </h4>
 
-    <form asp-action="Remove">
-        <input type="hidden" name="username" value="@Model.RelatedUser.UserName" />
-        <input type="submit" value="Remove" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to Friends List</a>
-    </form>
+        <div>
+            <h5 class="text-light text-left font-weight-light">
+                Are you sure you want to remove <span class="font-weight-bold">@Model.RelatedUser.UserName</span> as a friend?
+            </h5>
+
+            <hr />
+
+            <form asp-action="Remove">
+                <input type="hidden" name="username" value="@Model.RelatedUser.UserName" />
+                <button type="submit" class="btn btn-danger" title="Remove Friend">
+                    <i class="fa fa-times-circle text-light pr-2" aria-hidden="true"></i>Remove Friend
+                </button>
+                <a asp-action="Index" class="pl-3">Back to Friends List</a>
+            </form>
+        </div>
+    </div>
 </div>
