--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -7,10 +7,14 @@
     ViewData["Title"] = @Model.Game.Name;
 }
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="container">
     <div class="row">
         <div class="col-md">
-            <h4 class="text-light font-weight-light text-uppercase">@Model.Game.Name</h4>
+            <h4 class="text-light font-weight-light text-uppercase">
+                <i class="fa fa-gamepad text-secondary pr-2" aria-hidden="true"></i>@Model.Game.Name
+            </h4>
         </div>
     </div>
 
