--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <h4 class="text-light font-weight-light text-uppercase">@Model.User.UserName's Wishlist</h4>
+            <h4 class="text-light font-weight-lighter text-uppercase"><i class="fa fa-heart text-secondary pr-2" aria-hidden="true"></i>@Model.User.UserName's Wishlist</h4>
         </div>
 
         @if (User.Identity.Name == Model.User.UserName)
@@ -33,8 +33,8 @@
                 @if (Model.WishlistVisibility != WishlistVisibility.OnlyMe)
                 {
                     <a class="text-light cursor-pointer" data-toggle="tooltip" data-placement="top" title="Copy wishlist link"
-                        onclick="copy_to_clipboard('@{<text>@Url.Action("Index", "Wishlist", new { username = Model.User.UserName }, Url.ActionContext.HttpContext.Request.Scheme)</text>}')">
-                        <i class="fa fa-copy" aria-hidden="true"></i>
+                       onclick="copy_to_clipboard('@{<text>@Url.Action("Index", "Wishlist", new { username = Model.User.UserName }, Url.ActionContext.HttpContext.Request.Scheme)</text>}')">
+                        <i class="fa fa-copy text-secondary" aria-hidden="true"></i>
                         <span>Share wishlist</span>
                     </a>
                 }
@@ -71,19 +71,7 @@
 
 @if (Model.Games.Any())
 {
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Developer</th>
-                <th>Date Added</th>
-                <th>Price</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
+    <table class="table table-hover table-borderless rounded moist-bg-light moist-shadow moist-border-secondary mt-3">
         <tbody>
             @foreach (var item in Model.Games)
             {
@@ -95,14 +83,32 @@
                         </a>
                     </td>
                     <td>
-                        <a asp-controller="Game" asp-action="Details" asp-route-id="@item.WishlistItem.Game.GameId" class="text-decoration-none" style="color:white">@Html.DisplayFor(modelItem => item.WishlistItem.Game.Name)</a>
+                        <a asp-controller="Game" asp-action="Details" asp-route-id="@item.WishlistItem.Game.GameId"
+                           class="text-decoration-none">
+                            <p class="text-dark font-weight-bold mb-0">
+                                @Html.DisplayFor(modelItem => item.WishlistItem.Game.Name)
+                            </p>
+                            <p class="text-secondary mb-0">
+                                @Html.DisplayFor(modelItem => item.WishlistItem.Game.Developer)
+                            </p>
+                        </a>
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.WishlistItem.Game.Developer)
+                        <span class="text-secondary">
+                            @Html.DisplayFor(modelItem => item.WishlistItem.Game.GameType.Name)
+                        </span>
                     </td>
                     <td>
-                        <span class="cursor-help" title="@item.WishlistItem.AddedOn?.ToString("MMM dd h:mm tt")">
-                            @(item.WishlistItem.AddedOn?.ToString("yyyy/MM/dd"))
+                        @* Rating TODO: change this below when Review is implemented *@
+                        <span title="Rating: 3.5">
+                            <i class="fa fa-star text-secondary" aria-hidden="true"></i><i class="fa fa-star text-secondary" aria-hidden="true"></i><i class="fa fa-star text-secondary" aria-hidden="true"></i><i class="fa fa-star-half-o text-secondary" aria-hidden="true"></i><i class="fa fa-star-o text-secondary" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                    <td>
+                        <span class="cursor-help text-secondary" title="@item.WishlistItem.AddedOn?.ToString("MMM dd h:mm tt")">
+                            <small>
+                                @(item.WishlistItem.AddedOn?.ToString("yyyy/MM/dd"))
+                            </small>
                         </span>
                     </td>
                     <td>
@@ -111,7 +117,7 @@
                             <div class="d-flex">
                                 <div class="mr-2">
                                     <span class="moist-discount-regular-price text-secondary">@item.WishlistItem.Game.RegularPrice</span>
-                                    <span class="moist-discount-price text-light">@item.Discount.DiscountPrice</span>
+                                    <span class="moist-discount-price text-dark">@item.Discount.DiscountPrice</span>
                                 </div>
                                 <span class="moist-discount-percent shadow rounded moist-tooltip">
                                     @string.Format("{0:0%}", item.Discount.DiscountPrice / item.WishlistItem.Game.RegularPrice)
@@ -124,22 +130,22 @@
                         }
                         else
                         {
-                            <h5 class="text-light font-weight-bold">@item.WishlistItem.Game.RegularPrice</h5>
+                            <h5 class="text-dark font-weight-bold">@item.WishlistItem.Game.RegularPrice</h5>
                         }
                     </td>
                     <td>
                         @if (!item.IsInCart)
                         {
                             <form asp-route-gameId="@item.WishlistItem.Game.GameId" asp-route-recipientUserId="@Model.User.Id" asp-controller="Cart" asp-action="Add">
-                                <button type="submit" class="btn btn-light btn-outline-secondary" title="Add to cart"><i class="fa fa-shopping-cart text-dark" aria-hidden="true"></i></button>
+                                <button type="submit" class="btn btn-sm btn-outline-secondary gradient-button" title="Add to cart"><i class="fa fa-shopping-cart text-dark" aria-hidden="true"></i></button>
                             </form>
                         }
                     </td>
-                    <td>
+                    <td class="p-0">
                         @if (User.Identity.Name == Model.User.UserName)
                         {
                             <form asp-route-gameId="@item.WishlistItem.Game.GameId" asp-controller="Wishlist" asp-action="Remove">
-                                <button type="submit" class="btn btn-link" title="Remove"><i class="fa fa-times text-danger" aria-hidden="true"></i></button>
+                                <button type="submit" class="btn btn-link text-danger" title="Remove"><i class="fa fa-times" aria-hidden="true"></i></button>
                             </form>
                         }
                     </td>
