--- a/Sprint/Sprint/wwwroot/css/style.css
+++ b/Sprint/Sprint/wwwroot/css/style.css
@@ -81,7 +81,11 @@ body {
     visibility: visible;
 }
 
-.gradient-buttons .btn {
+.moist-border-secondary tr:not(:first-child) td {
+    border-top: 1px solid #b4b7bb !important;
+}
+
+.gradient-button {
     background-image: linear-gradient(to bottom, rgba(255,255,255,0.5), rgba(255,255,255,0.2) 49%, rgba(0,0,0,0.15) 51%, rgba(0,0,0,0.05));
     background-repeat: repeat-x;
 }
