--- a/Sprint/Sprint/Views/Friends/Add.cshtml
+++ b/Sprint/Sprint/Views/Friends/Add.cshtml
@@ -23,7 +23,7 @@
                     <input class="form-control" id="add-friend-username" name="username" placeholder="Search for people..." />
                 </div>
                 <div class="form-group col-md-4">
-                    <input type="submit" value="Invite" class="btn btn-primary w-100" />
+                    <button type="submit" class="btn btn-primary w-100"><i class="fa fa-paper-plane pr-2" aria-hidden="true"></i>Invite</button>
                 </div>
             </div>
         </form>
