--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -9,6 +9,12 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<script language="javascript">
+    function change_image(src) {
+        document.getElementById("imagePopupImg").src = src;
+    }
+</script>
+
 <div class="container">
     <div class="row">
         <div class="col-md">
@@ -20,10 +26,7 @@
 
     <div class="row">
         <div class="col-sm-8">
-            @foreach (var image in Model.Game.GameImages)
-            {
-                <img class="img-fluid" src="@image.ImageURL">
-            }
+            <img class="img-fluid" src="@Model.Image.ImageURL">
         </div>
         <div class="col-md-4">
             <h5 class="text-light">@Html.DisplayNameFor(model => model.Game.Developer)</h5>
@@ -51,6 +54,50 @@
             }
         </div>
     </div>
+
+    @if (Model.Images.Any())
+    {
+        // Images Carousel
+        <div class="mt-4 mb-5">
+            <div id="carouselExampleIndicators" class="carousel slide w-100" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner no-gutters">
+                    @for (int i = 0; i < Model.Images.Count; i += 4)
+                    {
+                        <div class="carousel-item @(i == 0 ? "active" : "")">
+                            <div class="row">
+                                @for (int j = i; j < i + 4 && j < Model.Images.Count; j++)
+                                {
+                                    <div class="col-sm-3 p-1">
+                                        <button type="button" class="btn btn-link p-0" data-toggle="modal" data-target="#imagePopupModal" onclick="change_image('@Model.Images[j].ImageURL')">
+                                            <img class="img-fluid" src="@Model.Images[j].ImageURL">
+                                        </button>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                    }
+                </div>
+                @if (Model.Images.Count > 4)
+                {
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                }
+            </div>
+        </div>
+
+        // Image Popup
+        <div class="modal fade bd-example-modal-lg" id="imagePopupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                <img id="imagePopupImg" class="img-fluid" src="@Model.Image.ImageURL">
+            </div>
+        </div>
+    }
 
     <hr />
 
