Review design and backend changes

--- a/Sprint/Sprint/Views/Reviews/Details.cshtml
+++ b/Sprint/Sprint/Views/Reviews/Details.cshtml
@@ -1,10 +1,9 @@
-﻿@model Sprint.Models.Review
+@model Sprint.Models.Review
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 @if (TempData["AlreadyExists"] is string)
 {
     <div class="alert alert-secondary" role="alert">
@@ -13,14 +12,26 @@
 }
 
 <div>
-    <h4>Review</h4>
+    <h4>@Model.Game.Name Reviewed by @Model.User.UserName</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rating)
+            <div class="rate">
+                <input asp-for="@Model.Rating" type="radio" id="star5" name="@Model.Rating" value="5" />
+                <label for="star5" title="text">5 stars</label>
+                <input asp-for="@Model.Rating" type="radio" id="star4" name="@Model.Rating" value="4" />
+                <label for="star4" title="text">4 stars</label>
+                <input asp-for="@Model.Rating" type="radio" id="star3" name="@Model.Rating" value="3" />
+                <label for="star3" title="text">3 stars</label>
+                <input asp-for="@Model.Rating" type="radio" id="star2" name="@Model.Rating" value="2" />
+                <label for="star2" title="text">2 stars</label>
+                <input asp-for="@Model.Rating" type="radio" id="star1" name="@Model.Rating" value="1" />
+                <label for="star1" title="text">1 star</label>
+            </div>
+            <span asp-validation-for="@Model.Rating" class="text-danger"></span>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReviewContent)
@@ -43,6 +54,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ReviewId">Edit</a> |
-    <a asp-action="Index" asp-route-id="@Model.GameId">Back to List</a>
+    @if (User.Identity.Name.ToLower() == @Model.User.Name.ToLower())
+    {
+        <a class="btn btn-primary btn-danger w-25" asp-action="Edit" asp-route-id="@Model.ReviewId"> Edit</a>
+    }
+    <a class="btn btn-primary btn-danger w-25" asp-action="Index" asp-route-id="@Model.GameId">Back to List</a>
 </div>
