--- a/Sprint/Sprint/Views/Reviews/Create.cshtml
+++ b/Sprint/Sprint/Views/Reviews/Create.cshtml
@@ -1,30 +1,41 @@
-﻿@model Sprint.Models.Review
+@model Sprint.Models.Review
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Add Review</h1>
+<h1>Add a Review</h1>
 
-@*<h4>Reviewing @Model.Game.Name</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
+                <label style="min-width:100%" asp-for="Rating" class="control-label"></label>
+                <div class="rate">
+                    <input asp-for="Rating" type="radio" id="star5" name="Rating" value="5" />
+                    <label for="star5" title="text">5 stars</label>
+                    <input asp-for="Rating" type="radio" id="star4" name="Rating" value="4" />
+                    <label for="star4" title="text">4 stars</label>
+                    <input asp-for="Rating" type="radio" id="star3" name="Rating" value="3" />
+                    <label for="star3" title="text">3 stars</label>
+                    <input asp-for="Rating" type="radio" id="star2" name="Rating" value="2" />
+                    <label for="star2" title="text">2 stars</label>
+                    <input asp-for="Rating" type="radio" id="star1" name="Rating" value="1" />
+                    <label for="star1" title="text">1 star</label>
+                </div>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReviewContent" class="control-label"></label>
-                <input asp-for="ReviewContent" class="form-control" />
+                <label style="min-width:100%" asp-for="ReviewContent" class="control-label"></label>
+                @Html.TextAreaFor(model => model.ReviewContent)
+                @*<input asp-for="ReviewContent" class="form-control" />*@
                 <span asp-validation-for="ReviewContent" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary w-25" />
-                <a class="btn btn-primary w-25" role="button" asp-action="Index">Back to List</a>
+                <a class="btn btn-primary w-50" role="button" asp-controller="Game" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
