--- a/Sprint/Sprint/Views/Reviews/Edit.cshtml
+++ b/Sprint/Sprint/Views/Reviews/Edit.cshtml
@@ -4,44 +4,43 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Review</h4>
+<h4>Edit Your Review for @Model.Game.Name</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ReviewId" />
+            <input type="hidden" asp-for="UserId" />
+            <input type="hidden" asp-for="GameId" />
             <div class="form-group">
-                <label asp-for="User" class="control-label"></label>
-                <input disabled="disabled" asp-for="User.Name" class="form-control"/>
-                <span asp-validation-for="User" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game" class="control-label"></label>
-                <input disabled="disabled" asp-for="Game.Name" class="form-control"/>
-                <span asp-validation-for="Game" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
+                <label style="min-width:100%" asp-for="Rating" class="control-label"></label>
+                <div class="rate">
+                    <input asp-for="Rating" type="radio" id="star5" name="Rating" value="5" />
+                    <label for="star5" title="text">5 stars</label>
+                    <input asp-for="Rating" type="radio" id="star4" name="Rating" value="4" />
+                    <label for="star4" title="text">4 stars</label>
+                    <input asp-for="Rating" type="radio" id="star3" name="Rating" value="3" />
+                    <label for="star3" title="text">3 stars</label>
+                    <input asp-for="Rating" type="radio" id="star2" name="Rating" value="2" />
+                    <label for="star2" title="text">2 stars</label>
+                    <input asp-for="Rating" type="radio" id="star1" name="Rating" value="1" />
+                    <label for="star1" title="text">1 star</label>
+                </div>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReviewContent" class="control-label"></label>
+                <label style="min-width:100%" asp-for="ReviewContent" class="control-label"></label>
                 <input asp-for="ReviewContent" class="form-control" />
                 <span asp-validation-for="ReviewContent" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div>
+                <input type="submit" value="Save" class="btn btn-primary w-25" />
+                <a class="btn btn-primary w-50" asp-action="Index" asp-route-id="@Model.GameId">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index" asp-route-id="@Model.GameId">Back to List</a>
 </div>
 
 @section Scripts {
